# AI_friend-based-on-Pyside6

./: README.md  app.py  config.yaml  main.py  pet_memory.json  pet_window.py  pyproject.toml  requirements.txt  widgets.py  workers.py
