[project]
name = "ai-friend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "pyaudio>=0.2.14",
    "pyside6>=6.10.2",
    "requests>=2.32.5",
    "speechrecognition>=3.15.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
